// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`closed 1`] = `
<ForwardRef>
  <ForwardRef>
    <ForwardRef />
    <ForwardRef>
      1
    </ForwardRef>
  </ForwardRef>
  <ForwardRef>
    <ForwardRef />
    <ForwardRef>
      1
    </ForwardRef>
  </ForwardRef>
  <ForwardRef>
    vor 
    5 mins
  </ForwardRef>
</ForwardRef>
`;

exports[`with all attrs 1`] = `
<ForwardRef>
  <ForwardRef>
    <ForwardRef />
    <ForwardRef>
      1
    </ForwardRef>
  </ForwardRef>
  <ForwardRef>
    <ForwardRef />
    <ForwardRef>
      1
    </ForwardRef>
  </ForwardRef>
  <ForwardRef>
    vor 
    5 mins
  </ForwardRef>
  <ForwardRef>
    <e
      background={true}
      className="ink"
      duration={1000}
      opacity={0.25}
      radius={150}
      recenter={true}
    />
    Kommentieren
  </ForwardRef>
</ForwardRef>
`;
